--- a/InfinityVision/image_process/templates/image_process/edit_image_name.html
+++ b/InfinityVision/image_process/templates/image_process/edit_image_name.html
@@ -11,7 +11,7 @@
                     padding: 20px;
                 }
                 .card {
-                    background: #ffffff;
+                    background: #272727;
                     border-radius: 16px;
                     box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
                     border: none;
@@ -24,7 +24,7 @@
                 }
                 .card-body h1 {
                     font-size: 2em;
-                    color: #333;
+                    color: #fafafa;
                     margin-bottom: 20px;
                     font-weight: 600;
                 }
@@ -36,7 +36,7 @@
                     display: block;
                     margin-bottom: 8px;
                     font-size: 16px;
-                    color: #333;
+                    color: #fafafa;
                     font-weight: 500;
                 }
                 .form-group input {
@@ -49,12 +49,12 @@
                     transition: border-color 0.3s, box-shadow 0.3s;
                 }
                 .form-group input:focus {
-                    border-color: #007bff;
+                    border-color: #059652;
                     outline: none;
                     box-shadow: 0 0 8px rgba(0, 123, 255, 0.3);
                 }
                 .btn {
-                    background-color: #007bff;
+                    background-color: #27a776;
                     color: #fff;
                     border: none;
                     padding: 14px 24px;
@@ -68,7 +68,7 @@
                     margin: 10px;
                 }
                 .btn:hover {
-                    background-color: #0056b3;
+                    background-color: #059652;
                     transform: scale(1.05);
                 }
                 .btn-cancel {
@@ -111,5 +111,8 @@
             </form>
         </div>
     </div>
+    <br>
+    <br>
+    <br>
 </div>
 {% endblock %}
