--- a/InfinityVision/InfinityVision/templates/InfinityVision/base.html
+++ b/InfinityVision/InfinityVision/templates/InfinityVision/base.html
@@ -77,9 +77,12 @@
                 <li>
                     <a href="{% if user.is_authenticated %}{% url 'image_process:my_images' %}{% else %}{% url 'users:signin' %}{% endif %}">Gallery</a>
                 </li>
-
+                <li>
+                    <a href="{% if user.is_authenticated %}{% url 'pdf_process:my_pdfs' %}{% else %}{% url 'users:signin' %}{% endif %}">Documents</a>
+                </li>
                 <li class="dropdown">
-                    <a href="#"><span>My Profile</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                    <a href="{% url 'users:user_view' user.username %}"><span>My Profile</span> <i
+                            class="bi bi-chevron-down toggle-dropdown"></i></a>
                     <ul>
                         <li><a href="{% url 'users:edit_user' user.id %}">Edit Profile</a></li>
                         <li><a href="{% url 'users:logout' %}">Logout</a></li>
@@ -87,13 +90,14 @@
                 </li>
                 {% endif %}
                 <li><a href="{% url 'facts' %}">Fun facts</a></li>
-                <li><a href="/">Contact</a></li>
+                <li><a href="{% url 'contact' %}">Contact</a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
 
         <div class="header-social-links">
-            <a href="https://github.com/AndriKovalchuk/ImageClassificationService/tree/master" class="gitgub" target="_blank"><i class="bi bi-github"></i></a>
+            <a href="https://github.com/AndriKovalchuk/ImageClassificationService/tree/master" class="gitgub"
+               target="_blank"><i class="bi bi-github"></i></a>
             <a href="https://www.linkedin.com" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
         </div>
 
@@ -109,11 +113,13 @@
 <footer id="footer" class="footer">
     <div class="container">
         <div class="copyright text-center">
-            <p>© <span>Copyright</span> <strong class="px-1 sitename">InfinityVision</strong>
-                <span>All Rights Reserved</span></p>
+            <p>© 2024 <span>Copyright</span> <strong class="px-1 sitename">InfinityVision</strong>.
+                <span>All rights reserved.</span>
+            </p>
         </div>
         <div class="social-links d-flex justify-content-center">
-            <a href="https://github.com/AndriKovalchuk/ImageClassificationService/tree/master" class="gitgub" target="_blank"><i class="bi bi-github"></i></a>
+            <a href="https://github.com/AndriKovalchuk/ImageClassificationService/tree/master" class="gitgub"
+               target="_blank"><i class="bi bi-github"></i></a>
             <a href="https://www.linkedin.com" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
         </div>
         <div class="credits">
