--- a/InfinityVision/image_process/templates/image_process/my_images.html
+++ b/InfinityVision/image_process/templates/image_process/my_images.html
@@ -11,7 +11,7 @@
             height: 100%;
             margin: 0;
             padding: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: "Roboto",  system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
             background: #000;
         }
         body {
