--- a/InfinityVision/image_process/templates/image_process/upload_image.html
+++ b/InfinityVision/image_process/templates/image_process/upload_image.html
@@ -3,23 +3,14 @@
 {% block content %}
 <style>
     body {
-        font-family: Arial, sans-serif;
-        background-color: #f4f4f9;
+        font-family: "Roboto",  system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+        background-color: #060606;
         margin: 0;
         padding: 0;
     }
-    .container {
-        max-width: 600px;
-        margin: 50px auto;
-        padding: 30px;
-        background: #fff;
-        border-radius: 10px;
-        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
-        border: 1px solid #ddd;
-        text-align: center;
-    }
-    h1 {
-        color: #333;
+
+    h2 {
+        color: #d3d3d3;
         margin-bottom: 20px;
         font-size: 2.5em;
         font-weight: bold;
@@ -31,15 +22,9 @@
         align-items: center;
     }
     .form-group {
-        width: 100%;
+        width: 80%;
         margin-bottom: 20px;
-    }
-    label {
-        margin-bottom: 10px;
-        font-weight: bold;
-        color: #444;
-        font-size: 18px;
-        display: block;
+        color: #FAFAFA;
     }
     input[type="file"] {
         border: 1px solid #ddd;
@@ -47,16 +32,16 @@
         border-radius: 5px;
         width: calc(100% - 24px); /* Adjust for padding */
         box-sizing: border-box;
-        background-color: #f9f9f9;
+        background-color: #000000;
         transition: border-color 0.3s, background-color 0.3s;
     }
     input[type="file"]:focus {
-        border-color: #007bff;
+        border-color: #059652;
         background-color: #e9f7ff;
         outline: none;
     }
     input[type="file"]::file-selector-button {
-        background-color: #007bff;
+        background-color: #27a776;
         color: #fff;
         border: none;
         padding: 10px;
@@ -66,10 +51,10 @@
         transition: background-color 0.3s;
     }
     input[type="file"]::file-selector-button:hover {
-        background-color: #0056b3;
+        background-color: #27a776;
     }
     button, .btn {
-        background-color: #007bff;
+        background-color: #059652;
         color: #fff;
         border: none;
         padding: 14px 24px;
@@ -83,7 +68,7 @@
         margin-top: 20px;
     }
     button:hover, .btn:hover {
-        background-color: #0056b3;
+        background-color: #27a776;
         transform: scale(1.05);
     }
     .form-group p {
@@ -102,17 +87,42 @@
             padding: 12px 20px;
         }
     }
+    .centered-heading {
+                text-align: center;
+            }
+    .btn-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    }
+
+    .btn-small {
+    width: 200px; 
+    text-align: center;
+    }
 </style>
-<h1>Upload Images</h1>
+<br>
+<br>
+<h2 class="centered-heading"> Upload Images</h2>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="form-group">
-        <label for="id_file_field">Choose image files:</label>
         {{ form.file_field }}
         <p>Only image files are allowed. You can select multiple files.</p>
     </div>
     <button type="submit">Upload</button>
 </form>
-<a href="{% url 'image_process:my_images' %}" class="btn">My Images</a>
-
+<div class="btn-container">
+    <a href="{% url 'image_process:my_images' %}" class="btn btn-small">My Images</a>
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 {% endblock %}
