--- a/InfinityVision/InfinityVision/templates/InfinityVision/base.html
+++ b/InfinityVision/InfinityVision/templates/InfinityVision/base.html
@@ -78,7 +78,7 @@
                     <a href="{% if user.is_authenticated %}{% url 'image_process:my_images' %}{% else %}{% url 'users:signin' %}{% endif %}">Gallery</a>
                 </li>
                 <li>
-                    <a href="{% if user.is_authenticated %}{% url 'pdf_process:my_pdfs' %}{% else %}{% url 'users:signin' %}{% endif %}">Documents</a>
+                    <a href="{% if user.is_authenticated %}{% url 'pdf_process:my_documents' %}{% else %}{% url 'users:signin' %}{% endif %}">Documents</a>
                 </li>
                 <li class="dropdown">
                     <a href="{% url 'users:user_view' user.username %}"><span>My Profile</span> <i
