--- a/InfinityVision/InfinityVision/templates/InfinityVision/contact.html
+++ b/InfinityVision/InfinityVision/templates/InfinityVision/contact.html
@@ -1,7 +1,6 @@
 {% extends 'InfinityVision/base.html' %}
 {% block content %}
 
-
 <main class="main">
 
     <!-- Page Title -->
@@ -11,9 +10,10 @@
                 <div class="row d-flex justify-content-center text-center">
                     <div class="col-lg-8">
                         <h1>Contact</h1>
-                        <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint
-                            voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores.
-                            Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+                        <p class="mb-0">We’d love to hear from you! If you have any questions, feedback, or need
+                            assistance, please don’t hesitate to reach out. Our team is here to help and will get back
+                            to you as soon as possible. Fill out the form below or use the contact details provided, and
+                            we'll be in touch. Thank you for connecting with us!</p>
                     </div>
                 </div>
             </div>
@@ -21,7 +21,7 @@
         <nav class="breadcrumbs">
             <div class="container">
                 <ol>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="{% url 'index' %}">Home</a></li>
                     <li class="current">Contact</li>
                 </ol>
             </div>
@@ -69,32 +69,41 @@
                 </div>
             </div>
 
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up"
+            <form method="post" action="#" class="php-email-form" data-aos="fade-up"
                   data-aos-delay="300">
+
+                {% csrf_token %}
                 <div class="row gy-4">
 
                     <div class="col-md-6">
-                        <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
+                        <input type="text" name="user_name" class="form-control" placeholder="Your Name" required>
                     </div>
 
-                    <div class="col-md-6 ">
-                        <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
-                    </div>
-
-                    <div class="col-md-12">
-                        <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
+                    <div class="col-md-6">
+                        <input type="email" name="user_email" class="form-control" placeholder="Your Email" required>
                     </div>
 
                     <div class="col-md-12">
-                        <textarea class="form-control" name="message" rows="6" placeholder="Message"
-                                  required=""></textarea>
+                        <input type="text" name="subject" class="form-control" placeholder="Subject" required>
+                    </div>
+
+                    <div class="col-md-12">
+                        <textarea name="message" class="form-control" rows="6" placeholder="Message"
+                                  required></textarea>
                     </div>
 
                     <div class="col-md-12 text-center">
-                        <div class="loading">Loading</div>
-                        <div class="error-message"></div>
+                        {% if errors %}
+                        <div class="error-message">
+                            <ul>
+                                {% for error in errors %}
+                                <li>{{ error }}</li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                        {% elif success %}
                         <div class="sent-message">Your message has been sent. Thank you!</div>
-
+                        {% endif %}
                         <button type="submit">Send Message</button>
                     </div>
 
@@ -106,6 +115,5 @@
     </section><!-- /Contact Section -->
 
 </main>
-
 
 {% endblock %}
