--- a/InfinityVision/pdf_process/templates/pdf_process/upload_success.html
+++ b/InfinityVision/pdf_process/templates/pdf_process/upload_success.html
@@ -57,8 +57,8 @@
 <br>
 <br>
 <h2>Upload Successful!</h2>
-<p>Your PDF document has been uploaded and processed successfully.</p>
-<a href="{% url 'pdf_process:my_pdfs' %}" class="btn">Back to My PDFs</a>
+<p>Your document has been uploaded and processed successfully.</p>
+<a href="{% url 'pdf_process:my_documents' %}" class="btn">Back to My Documents</a>
 </body>
 </html>
 
